# baxtub

./: .gitignore  README.md  pyproject.toml
baxtub/algorithms/: ppo.py
baxtub/configs/: dqn.cartpole.yaml  ppo.crafter.icm.yaml  ppo.crafter.yaml
baxtub/environments/: wrappers.py
baxtub/networks/: actorcritic.py  dynamics.py
baxtub/utils/: logging.py
